[gd_scene load_steps=3 format=3 uid="uid://c22pnahgk88ch"]

[ext_resource type="Script" path="res://main/game_over.gd" id="1_dhmyj"]
[ext_resource type="FontFile" uid="uid://w8gffpusjlpl" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_wf6fl"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhmyj")

[node name="PressSpaceText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -26.0
offset_right = 129.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.517647, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_wf6fl")
theme_override_font_sizes/font_size = 48
text = "PRESSSPACE"

[node name="GameOverText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.517647, 0.45098, 1)
theme_override_fonts/font = ExtResource("1_wf6fl")
theme_override_font_sizes/font_size = 48
text = "GAME OVER
"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
